added: styling docs and examples

--- a/sass/progress.scss
+++ b/sass/progress.scss
@@ -1,7 +1,7 @@
-$circle-color: #a1a1a1;
-$circle-progress-color: #ff5521;
-$bg-color: #fff;
-$circle-width: 3%;
+$circle-color: #a1a1a1 !default;
+$circle-progress-color: #ff5521 !default;
+$bg-color: #fff !default;
+$circle-width: 3% !default;
 
 .circle {
 
