added: more samples to demo page

--- a/examples/styling-scss.css
+++ b/examples/styling-scss.css
@@ -1,33 +1,32 @@
-.circle .color {
-  background-color: #FF9205;
-  color: #6C6C6C;
-  display: none; }
-
-.circle .outer {
-  display: block;
-  width: 100%;
-  height: 100%;
-  border-radius: 50%;
-  background-color: #FF9205;
-  background-image: linear-gradient(180deg, transparent 50%, #6C6C6C 50%), linear-gradient(90deg, #6C6C6C 50%, transparent 50%); }
-
-.circle .inner {
-  height: 93%;
-  width: 93%;
-  border-radius: 50%;
-  position: relative;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  background: #1C1D61; }
-
-.circle .progress-text {
-  position: relative;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: auto;
-  display: inline-block; }
+.circle {
+  text-align: left; }
+  .circle .color {
+    background-color: #ff9205;
+    color: #6c6c6c;
+    display: none; }
+  .circle .outer {
+    display: block;
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    background-color: #ff9205;
+    background-image: linear-gradient(90deg, transparent 50%, #6c6c6c 50%), linear-gradient(90deg, #6c6c6c 50%, transparent 50%); }
+  .circle .inner {
+    height: 93%;
+    width: 93%;
+    border-radius: 50%;
+    position: relative;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background: #1c1d61; }
+  .circle .progress-text {
+    position: relative;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: auto;
+    display: inline-block; }
 
 html, body {
   width: 100%;
@@ -36,7 +35,7 @@ html, body {
 
 body {
   margin: 0;
-  background: #1C1D61; }
+  background: #1c1d61; }
 
 .circle {
   width: 300px;
@@ -48,4 +47,4 @@ body {
   left: 50%;
   transform: translate(-50%, -50%);
   font-size: 20px;
-  color: #FF9205; }
+  color: #ff9205; }
